feat: create docker-compose and sql for deploy the database. Add config in properties

--- a/triviaRush_backend/src/main/resources/application.properties
+++ b/triviaRush_backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Application Name
 spring.application.name=triviaRush_backend
+
+# Datasource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/triviarush
+spring.datasource.username=triviarush
+spring.datasource.password=triviarush123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
