feat: add enum difficult for questions

--- a/triviaRush_backend/pom.xml
+++ b/triviaRush_backend/pom.xml
@@ -106,6 +106,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.19.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
